[gd_scene load_steps=18 format=3 uid="uid://d2cf84ka4f236"]

[ext_resource type="PackedScene" uid="uid://clrgpm7230fwn" path="res://assets/prefabs/player.tscn" id="1_2w8ky"]
[ext_resource type="Script" path="res://assets/autoload/GameManager.gd" id="2_3hkvr"]
[ext_resource type="TileSet" uid="uid://cejloqnpexojn" path="res://assets/prefabs/floortile.tres" id="2_g5ph3"]
[ext_resource type="PackedScene" uid="uid://bnlhisaaqbdug" path="res://assets/prefabs/campfire.tscn" id="7_ithq3"]
[ext_resource type="AudioStream" uid="uid://c3gqv865v4q6k" path="res://assets/sound/Fire Stick Land-001.ogg" id="7_rvhh1"]
[ext_resource type="Texture2D" uid="uid://chlrr8crai1ce" path="res://assets/art/particles/softglow2.png" id="8_51lwf"]
[ext_resource type="AudioStream" uid="uid://dao1rjj1urbyj" path="res://assets/sound/Fire Stick Land-002.ogg" id="8_87wy5"]
[ext_resource type="AudioStream" uid="uid://bo7nvasevwb7c" path="res://assets/sound/Fire Stick Land-003.ogg" id="9_3ra2i"]
[ext_resource type="PackedScene" uid="uid://d1q2xosnvigo2" path="res://assets/prefabs/stick.tscn" id="9_m5vm6"]
[ext_resource type="AudioStream" uid="uid://clc4ksrpcv4dl" path="res://assets/sound/Fire Stick Land-004.ogg" id="10_1fwo5"]

[sub_resource type="LabelSettings" id="LabelSettings_dsaux"]
font_size = 120
font_color = Color(0.2, 0.490196, 0.8, 1)
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0.295, 1)

[sub_resource type="Curve" id="Curve_q0sb2"]
_data = [Vector2(0.00849859, 0.946747), 0.0, 0.0, 0, 0, Vector2(0.246459, 0.495663), 0.0, 0.0, 0, 0, Vector2(0.413598, 0.793253), 0.0, 0.0, 0, 0, Vector2(0.634561, 0.511325), 0.0, 0.0, 0, 0, Vector2(0.824363, 0.786988), 0.0, 0.0, 0, 0, Vector2(1, 0.266988), 0.0, 0.0, 0, 0]
point_count = 6

[sub_resource type="CurveTexture" id="CurveTexture_5k2ff"]
curve = SubResource("Curve_q0sb2")

[sub_resource type="Gradient" id="Gradient_uach0"]
offsets = PackedFloat32Array(0, 0.359322, 0.718644, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_aya6t"]
gradient = SubResource("Gradient_uach0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a8ihg"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(100, 100, 1)
emission_shape = 3
emission_box_extents = Vector3(30, 30, 1)
angle_max = 283.7
initial_velocity_min = 64.04
initial_velocity_max = 123.15
gravity = Vector3(0, 900, 0)
linear_accel_min = -30.54
linear_accel_max = 26.6
radial_accel_min = -35.47
radial_accel_max = 57.14
damping_min = 1.478
damping_max = 11.823
color_ramp = SubResource("GradientTexture1D_aya6t")
alpha_curve = SubResource("CurveTexture_5k2ff")
turbulence_enabled = true
turbulence_noise_speed = Vector3(30, 0, 0)
turbulence_influence_max = 0.165
turbulence_initial_displacement_min = -14.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_t5mpa"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 4
stream_0/stream = ExtResource("7_rvhh1")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_87wy5")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_3ra2i")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_1fwo5")
stream_3/weight = 1.0

[node name="root" type="Node2D"]
script = ExtResource("2_3hkvr")
bat_offset_spawn = 2000

[node name="BatSpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="StickSpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WaveTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="TutorialText" type="Label" parent="."]
offset_left = -818.0
offset_top = -787.0
offset_right = 820.0
offset_bottom = -258.0
text = "Msgs and debug displayed here at runtime"
label_settings = SubResource("LabelSettings_dsaux")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
visible = false
modulate = Color(0.731076, 0.837303, 0.892879, 1)
z_index = 5
amount = 40
process_material = SubResource("ParticleProcessMaterial_a8ihg")
texture = ExtResource("8_51lwf")
lifetime = 5.0
preprocess = 4.0
randomness = 0.11
local_coords = true
trail_sections = 10
metadata/_edit_lock_ = true

[node name="Map" type="Node2D" parent="."]
visible = false

[node name="Tilemap floor" type="TileMap" parent="Map"]
visible = false
z_index = -10
tile_set = ExtResource("2_g5ph3")
format = 2
layer_0/tile_data = PackedInt32Array(-131076, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 131068, 0, 0, 196604, 0, 0, -131075, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196605, 0, 0, -131074, 0, 0, -65538, 0, 0, -2, 0, 0, 65534, 0, 0, 131070, 0, 0, 196606, 0, 0, -131073, 0, 0, -65537, 0, 0, -1, 0, 0, 65535, 0, 0, 131071, 0, 0, 196607, 0, 0, -196608, 0, 0, -131072, 0, 0, -65536, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, -196607, 0, 0, -131071, 0, 0, -65535, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, -196606, 0, 0, -131070, 0, 0, -65534, 0, 0, 2, 0, 0, 65538, 0, 0, 131074, 0, 0, -196605, 0, 0, -131069, 0, 0, -65533, 0, 0, 3, 0, 0, 65539, 0, 0, 131075, 0, 0, 458750, 0, 0, 393214, 0, 0, 393215, 0, 0, 327679, 0, 0, 262143, 0, 0)

[node name="campfire" parent="." instance=ExtResource("7_ithq3")]
metadata/_edit_lock_ = true

[node name="player" parent="." instance=ExtResource("1_2w8ky")]
position = Vector2(-298, -270)

[node name="stick" parent="." instance=ExtResource("9_m5vm6")]
position = Vector2(-448, 259)
rotation = -0.851721

[node name="stick2" parent="." instance=ExtResource("9_m5vm6")]
position = Vector2(317, -202)

[node name="StickSpawnSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_t5mpa")
volume_db = -12.0
pitch_scale = 0.5

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
